# PPT

./: .gitattributes  .gitignore  ENHANCEMENT_SUMMARY.md  FRONTEND_GUIDE.md  QUICK_START.md  STREAMLIT_QUICKSTART.md  app.py  index_templates.py  main.py  main_pipeline2.py  pyproject.toml  requirements.txt  start_frontend.bat  start_frontend.ps1  streamlit_app.py  test_auth.py  test_azure.py  test_beautifier.py  test_beautifier_circle.py  test_beautifier_circle_smoke.py  test_beautifier_smoke.py  test_enhancements_unit.py  test_injector_defensive.py  test_layout_designer.py  test_parser.py  test_pipeline2_enhanced.py  verify_defensive_fixes.py  verify_output.py
data/registry/: template--2.json  template2.json
nodes/: Registry_builder.py  auth_helper.py  graph.py  main.py  nodes.py  state.py
src/: config.py
src/core/: graph.py  graph_pipeline2.py  layout_models.py  state.py
src/nodes/pipeline_1_indexing/: __init__.py  layout_validator.py  parser.py  registry_builder.py
src/nodes/pipeline_2_generation/: __init__.py  architect.py  beautifier.py  extractor.py  image_director.py  injector.py  writer.py
src/utils/: auth_helper.py  inspect_template.py  ppt_helper.py  registry_helper.py  vault_client.py
