[project]
name = "ppt-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.77.1",
    "azure-identity>=1.25.2",
    "azure-keyvault-secrets>=4.10.0",
    "docx>=0.2.4",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "streamlit>=1.54.0",
]
